# MSD-SPOT-robot-Rev-4

./: README.md
marge/: CMakeLists.txt  package.xml
marge/include/marge/: ICLStepper.h
marge/src/: ICLStepper.cpp  homer.cpp
robot_bringup/: CMakeLists.txt  README.md  package.xml
robot_bringup/config/: robot_moveit.rviz  ros2_controllers.yaml
robot_bringup/launch/: robot.launch.py  robot_no_rviz.launch.py
robot_commander/: README.md
robot_commander/src/: commander.cpp
robot_controllers/: CMakeLists.txt  package.xml  robot_controllers.xml
robot_controllers/include/robot_controllers/: ArmSystem.hpp  ICLStepper.hpp  Motor.hpp
robot_controllers/include/robot_controllers/Communication/: ModbusDevice.hpp  RS485.hpp
robot_controllers/src/: ArmSystem.cpp  ICLStepper.cpp  Motor.cpp
robot_controllers/src/Communication/: ModbusDevice.cpp  RS485.cpp
robot_hardware/: CMakeLists.txt  README.md
robot_hardware/include/robot_hardware/: arm_hardware_interface.hpp
robot_hardware/src/: ICLStepper.cpp  arm_hardware_interface.cpp
robot_moveit_config/: .setup_assistant  README.md
robot_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  spotarm_assembly.ros2_control.xacro  spotarm_assembly.srdf
robot_servoing/: package.xml
robot_servoing/launch/: servo.launch.py  servo2.launch.py
robot_servoing/src/: my_gamepad_to_servo_node.cpp
robot_status_leds/: README.md
robot_status_leds/robot_status_leds/: led_state_node.py
spotarm_assembly_description/: README.md
spotarm_assembly_description/urdf/: spotarm.gv  spotarm_assembly.gazebo  spotarm_assembly.ros2_control.xacro  spotarm_assembly.trans  spotarm_assembly.urdf  spotarm_assembly.xacro
stepper_test/include/stepper_test/: ICLStepper.h  MotorSerial.hpp
stepper_test/src/: ICLStepper.cpp  MotorSerial.cpp  motor_key.cpp
